2008-07-07  Bernd Schmidt  <bernd.schmidt@analog.com>

	* configure.ac: Don't check AC_LIBTOOL_DLOPEN if using newlib.
	* configure: Regenerate.

2008-07-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/36616
	* testsuite/22_locale/time_put/put/char/4.cc: Just use es_ES instead.
	* testsuite/22_locale/time_put/put/wchar_t/4.cc: Likewise.

2008-06-30  Alfred E. Heggestad  <aeh@db.org>

	* include/backward/backward_warning.h: Fix typo.

2008-06-26  Paolo Carlini  <paolo.carlini@oracle.com>

	* include/parallel/base.h (plus, multiplies): Use __typeof__,
	not typeof.

2008-06-24  Paolo Carlini  <paolo.carlini@oracle.com>

	* include/bits/stl_algo.h (remove_if): Cast __pred result to bool.

2008-06-24  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/36616
	* testsuite/22_locale/money_put/put/char/9780-3.cc: Fix expected
	results for recent glibcs (2.8 and later).
	* testsuite/22_locale/time_put/put/wchar_t/4.cc: Likewise.
	* testsuite/22_locale/time_put/put/char/4.cc: Likewise.

2008-06-24  Paolo Carlini  <paolo.carlini@oracle.com>
	    Chalathip Thumkanon  <chalathip@gmail.com>

	PR libstdc++/36612
	* include/ext/pb_ds/exception.hpp (__throw_container_error,
	__throw_insert_error, __throw_join_error, __throw_resize_error):
	Mark inline.

2008-06-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* include/Makefile.am: Remove trailing white space, fix typo.
	(parallel_headers): Remove duplicate file, sort entries.
	* include/Makefile.in: Regenerate.

2008-06-06  Release Manager

	* GCC 4.3.1 released.

2008-06-05  Johannes Singler  <singler@ira.uka.de>

        * include/parallel/random_shuffle.h:
        (parallel_random_shuffle_drs) Get the actual number of
        threads after entering the parallel region. Indentation.
        * include/parallel/algo.h: (random_shuffle(begin, end))
        Add namespace qualification to avoid ambiguity.

2008-05-15  Johannes Singler  <singler@ira.uka.de>

        * doc/xml/manual/parallel_mode.xml: